# Down-Data

./: .gitignore  DATA_AVAILABILITY.md  PLAYER_CODE_REVIEW.md  README.md  SESSION_SUMMARY.md  VERIFICATION_RESULTS.md  blocking_problem.txt  data.py  main.py  player.py  player_master_stats.csv  pyproject.toml  requirements.txt  stats_engine.py  verify_data.py
agentic-feedback/: cursor-feedback.txt  feedback1_gpt5thinking.txt  feedback2_gpt5agent.txt  feedback3_gpt5agent.txt  feedback4_gpt5high.txt  feedback5_sonnet45.txt  feedback6_gpt5codex.txt  feedback6_grok4.txt  feedback_master.txt
app/: __init__.py  main.py
app/ui/: __init__.py  aspect_ratio_widget.py  main_window.py
data/: __init__.py  pipeline.py  storage.py
data/cache/: basic_player_stats.parquet  pfr_player_bio.parquet  player_impacts_1999_2024.parquet  player_summary_stats.parquet
data/exports/: README.md
data/nflverse/: README.md  metadata.json  player_impacts.parquet  player_seasons.parquet  players.parquet
docs/: ARCHITECTURE.md  PROJECT_REVIEW.md
down_data/: __init__.py  app.py  cli.py
scripts/: bootstrap_data.py  build_basic_cache.py  build_basic_offense_cache.py  build_nfl_datastore.py  build_player_impacts.py  build_player_summary_cache.py
stats/: README.md  __init__.py  passing.py  receiving.py  rushing.py  specialteams.py
tests/: test_data_repository.py  test_performance_profiles.py  test_pfr_html_utils.py  test_pfr_league.py  test_pfr_players.py  test_pfr_teams.py  test_player_detail_qb_table.py  test_player_fetch_stats.py  test_player_impacts.py  test_player_summary_cache.py
(+57 files in other folders)
