[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "down-data"
version = "0.1.0"
description = "NFL data exploration desktop app built with PySide6"
authors = [{name = "Down Data"}]
requires-python = ">=3.10,<3.11"
dependencies = [
    "PySide6>=6.7",
    "nfl_data_py>=0.3.1",
    "duckdb>=0.9",
    "pyarrow>=15",
    "pandas>=2.2",
    "python-dateutil>=2.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.3",
    "mypy>=1.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "data*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
